@@ -286,7 +286,7 @@ A
 .Ic location
 section may include most of the server configuration rules
 except
-.Ic alias , Ic cert , Ic env , Ic key , Ic root , Ic location ,
+.Ic alias , Ic cert , Ic env , Ic key , Ic location ,
 .Ic entrypoint No and Ic cgi .
 .It Ic root Pa directory
 Specify the root directory for this server.
